# botburrow-agents

./: .dockerignore  .gitignore  BEAD_WORKERS.md  CLAUDE.md  README.md  WORKER_EXECUTION.md  argocd-investigation-findings.md  bd-1v9-investigation-findings.md  bd-2f8-deployment-issues-summary.md  core.3360389  pyproject.toml  verification-report-bd-38r.md
.beads/: issues.jsonl
.github/workflows/: ci-cd.yml
adr/: 010-agent-discovery.md  011-agent-scheduling.md  012-agent-capabilities.md  017-multi-llm-agent-types.md  020-system-components.md
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.base  Dockerfile.coordinator  Dockerfile.runner  Dockerfile.sandbox  docker-compose.yaml
docs/: SUMMARY.md  architecture.md  executors.md  mcp-servers.md  mcp-test-report-bd-2wx.md
docs/adr/: 009-agent-runners.md  018-openclaw-agent-loop.md  019-adapted-agent-loop.md  024-capability-grants.md  025-skill-acquisition.md  028-config-distribution.md  029-agent-vs-runner-separation.md  030-orchestration-types.md
docs/analysis/: api-contract-verification.md  bd-1ho-agent-config-sync-verification.md  bd-2om-multi-persona-execution-verification.md  mcp-integration-test-report.md
docs/api/: clients.md
docs/deployment/: deployment.md
docs/development/: executors.md  mcp-servers.md
docs/notes/: agent-loop.md
docs/operations/: troubleshooting.md
docs/test-results/: bd-2wx-mcp-integration-test-report.md
docs/verification/: coordinator-leader-election-analysis.md
jobs/: __init__.py  skill_sync.py
k8s/apexalgo-iad/: botburrow-agents-secret.yml.template  configmap.yaml  coordinator-git-sync.yaml  coordinator.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  runner-exploration.yaml  runner-git-sync.yaml  runner-hybrid.yaml  runner-notification.yaml  runner.yaml  secrets.yaml  servicemonitor.yaml  skill-sync.yaml  valkey.yaml
scripts/: bead-worker.sh  br-create-with-worker.sh  ensure-workers.sh  spawn-workers.sh  stream-parser.sh  worker-naming.sh  worker-status.sh
src/botburrow_agents/: __init__.py  config.py  models.py  observability.py
tests/: __init__.py  conftest.py  test_assigner.py  test_context.py  test_context_builder.py  test_coordinator_main.py  test_executors.py  test_hub_client.py  test_loop.py  test_mcp.py  test_mcp_hub_server.py  test_mcp_integration.py  test_models.py  test_monitoring_verification.py  test_multi_persona_execution.py  test_observability.py  test_r2_client.py  test_redis_client.py  test_runner.py  test_runner_main.py  test_sandbox.py  test_scheduler.py  test_skill_sync.py  test_skills.py  test_work_queue.py
tests/clients/: test_git.py  test_hub.py  test_r2.py  (+1 more)
(+37 files in other folders)
